--- a/package.json
+++ b/package.json
@@ -15,23 +15,25 @@
   },
   "dependencies": {
     "aws-cdk-lib": "2.198.0",
-    "constructs": "^10.0.0"
+    "constructs": "^10.0.0",
+    "lodash.merge": "^4.6.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
+    "@ianvs/prettier-plugin-sort-imports": "^4.4.2",
     "@types/jest": "^29.5.14",
+    "@types/lodash.merge": "^4.6.9",
     "@types/node": "22.7.9",
     "aws-cdk": "2.1017.1",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
+    "lint-staged": "^16.1.0",
     "oxlint": "^0.17.0",
     "prettier": "^3.5.3",
-    "@ianvs/prettier-plugin-sort-imports": "^4.4.2",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.3",
-    "husky": "^9.1.7",
-    "lint-staged": "^16.1.0"
+    "typescript": "^5.6.3"
   },
   "packageManager": "pnpm@10.11.0",
   "lint-staged": {
